--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "gifshot": "^0.4.5",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0"
