--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint --fix",
     "lint:check": "eslint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "update-structure": "node scripts/structure/update.mjs"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.8",
