--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --fix",
-    "lint:check": "eslint",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "prepare": "husky install",
     "update-structure": "node scripts/structure/update.mjs"
   },
@@ -32,6 +32,7 @@
     "eslint-config-next": "16.0.5",
     "eslint-plugin-boundaries": "^5.3.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unicorn": "^62.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "tailwindcss": "^4",
