Отказался от критического технического долга в пользу prettier-plugin-tailwindcss и обновил проект в соответствии с его требованиями.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "eslint --fix",
     "stylelint": "stylelint \"**/*.css\"",
     "stylelint:fix": "stylelint \"**/*.css\" --fix",
-    "format": "npm run lint:fix && npm run stylelint:fix",
+    "format:prettier": "prettier --write .",
+    "format": "run-s format:prettier lint:fix stylelint:fix",
     "prepare": "husky install",
     "update-structure": "node scripts/structure/update.mjs"
   },
@@ -35,10 +36,12 @@
     "eslint-config-next": "16.0.5",
     "eslint-plugin-boundaries": "^5.3.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-tailwindcss": "^3.18.2",
     "eslint-plugin-unicorn": "^62.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
     "tailwindcss": "^4",
