--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "update-structure": "node scripts/structure/update.mjs"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "colord": "^2.9.3",
     "gifshot": "^0.4.5",
     "next": "^16.0.7",
     "react": "^19.2.1",
