--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "ignore": "^7.0.5",
     "next": "^16.0.7",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "remeda": "^2.32.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
