Добавлен предкоммитный вывод информации об успехе выполнения lint-staged.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Артемий Николаевич Ионаш",
   "private": true,
   "scripts": {
+    "amend": "git commit --amend --no-edit",
     "dev": "run-p dev:next type-check:watch context:watch",
     "dev:next": "next dev",
     "build": "next build",
