--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "incremental": true,
+    "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo",
     "plugins": [
       {
         "name": "next"
