--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,11 +47,11 @@
   },
   "include": [
     "next-env.d.ts",
+    "core/typescript/declarations/**/*.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
     "**/*.mts",
-    "lib/types/**/*.d.ts",
     ".next/dev/types/**/*.ts",
     "vitest.d.ts",
     "vitest.setup.ts"
